Fix wrong padding in inspiring quote

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,6 @@
     text-align: center;
 }
 
-.inspiring-quote__text {
+.inspiring-quote {
     padding: 50px 125px;
 }
